WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64261
Fix the condition of the optimized code in doubleTransfer
https://bugs.webkit.org/show_bug.cgi?id=64261
Summary
Fix the condition of the optimized code in doubleTransfer
Gabor Loki
Reported
2011-07-11 04:36:14 PDT
The condition of the optimized code in doubleTransfer is wrong on ARM. The data transfer should be executed with four bytes aligned address. VFP cannot perform unaligned memory access.
Attachments
Fix the condition of the optimized code in doubleTransfer
(2.38 KB, patch)
2011-07-11 04:38 PDT
,
Gabor Loki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gabor Loki
Comment 1
2011-07-11 04:38:06 PDT
Created
attachment 100265
[details]
Fix the condition of the optimized code in doubleTransfer
Zoltan Herczeg
Comment 2
2011-07-11 04:50:32 PDT
Comment on
attachment 100265
[details]
Fix the condition of the optimized code in doubleTransfer Nice catch.
WebKit Review Bot
Comment 3
2011-07-11 05:32:31 PDT
Comment on
attachment 100265
[details]
Fix the condition of the optimized code in doubleTransfer Clearing flags on attachment: 100265 Committed
r90738
: <
http://trac.webkit.org/changeset/90738
>
WebKit Review Bot
Comment 4
2011-07-11 05:32:35 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 5
2011-07-11 10:18:54 PDT
Regression test?
Zoltan Herczeg
Comment 6
2011-07-11 10:23:06 PDT
(In reply to
comment #5
)
> Regression test?
Basically all math tests are regression tests. This was a typo, which prevented to use the fast path on ARM, and generated multiple instructions even when one is enough.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug