Fix the condition of the optimized code in doubleTransfer https://bugs.webkit.org/show_bug.cgi?id=64261

Reviewed by Zoltan Herczeg.

The condition of the optimized code in doubleTransfer is wrong. The
data transfer should be executed with four bytes aligned address.
VFP cannot perform unaligned memory access.

Reported by Jacob Bramley.

* assembler/ARMAssembler.cpp:
(JSC::ARMAssembler::doubleTransfer):


Canonical link: https://commits.webkit.org/80003@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90738 268f45cc-cd09-0410-ab3c-d52691b4dbfc